[gd_scene load_steps=14 format=2]

[ext_resource path="res://textures/title_logo.png" type="Texture" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://SFX/Pickup_01.wav" type="AudioStream" id=4]
[ext_resource path="res://SFX/Menu_Navigate_02.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/Shoot_01.wav" type="AudioStream" id=6]
[ext_resource path="res://fonts/highlight_font_40.tres" type="DynamicFont" id=7]
[ext_resource path="res://godot_logo.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
Label/fonts/font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )
Label/fonts/font = null

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 3 )
highlight_font = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
margin_right = 512.0
margin_bottom = 512.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.0
margin_top = -264.0
margin_right = 484.0
margin_bottom = -40.0
rect_scale = Vector2( 0.7, 1 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartLabel" type="Label" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -56.0
margin_bottom = -7.0
text = "Start"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HiScore" type="Label" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -184.0
margin_bottom = -145.0
custom_fonts/font = SubResource( 3 )
text = "Hi: 0000000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLabel" type="Label" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -8.0
margin_bottom = 41.0
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SmallPrint" type="Control" parent="Control"]
margin_right = 512.0
margin_bottom = 512.0
theme = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="MadeWith" type="Label" parent="Control/SmallPrint"]
margin_left = 88.0
margin_top = 440.0
margin_right = 224.0
margin_bottom = 470.0
text = "Made with"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Licences" type="Label" parent="Control/SmallPrint"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 224.0
margin_bottom = 254.0
text = "See LICENSE for full credits"
align = 1

[node name="GodotLogo" type="TextureRect" parent="Control/SmallPrint"]
margin_left = 232.0
margin_top = 408.0
margin_right = 573.0
margin_bottom = 546.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="StartOptionsSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="SelectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
